finish first changes

--- a/src/app/styles/colors.scss
+++ b/src/app/styles/colors.scss
@@ -8,3 +8,5 @@ $darkgray: rgb(87, 87, 86);
 $gray: rgb(178, 178, 178);
 $lightgray: rgb(240, 240, 240);
 $bluegray: rgb(164, 188, 201);
+$leftAlignedMessageBG: ivory;
+$rightAlignedMessageBG: azure;
