--- a/src/app/chat/chat-list-view/chat-list-view.component.scss
+++ b/src/app/chat/chat-list-view/chat-list-view.component.scss
@@ -1,9 +1,6 @@
-.chat-message-list
+jc-chat-message-item
 {
-  margin-top: 70px;
-  width: 640px;
-  max-width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-
+  flex: 0;
 }
+
+
