--- a/src/app/chat/chat-list-view/chat-message-item/chat-message-item.component.html
+++ b/src/app/chat/chat-list-view/chat-message-item/chat-message-item.component.html
@@ -1,4 +1,4 @@
-<div class="card shadow w-75 {{message.isAlert}} {{message.cardAlign}}">
+<div class="card shadow {{message.isAlert}} {{message.cardAlign}}">
   <div class="card-body ">
     <p class="card-text {{message.textAlign}}">{{message.text}}</p>
   </div>
