--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,26 +1,38 @@
 @import './app/styles/colors.scss';
 
 /* You can add global styles to this file, and also import other style files */
+* {
+  z-index: 100;
+}
 
-body {
+html, body {
   //background-image: url('/assets/images/background.png');
   //background-repeat: no-repeat;
   //background-size: cover;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 14px;
   color: $darkgray;
+  height: 100%;
+  min-height: 100%;
 }
 
-footer {
-  z-index: 100;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 30px;
-  line-height: 30px;
-  font-size: 0.8em;
-  padding: 0 10px;
-  background-color: $lightgray;
+navbar {
+  height: 50px;
+}
+
+body {
+  margin: 0;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+jc-root {
+}
+
+footer{
+  color: gold;
+  font-size: .6em;
+  height: 50px;
 }
 
 .jeditilt {
