add some functionality to implmenent workaround to buggy flexbox/overflow behaviour

--- a/src/app/chat/chat-list-view/chat-list-view.component.html
+++ b/src/app/chat/chat-list-view/chat-list-view.component.html
@@ -1,7 +1,8 @@
-    <div *ngFor="let message of messageList"
-         class="card shadow {{message.isAlert}} {{message.cardAlign}}">
-      <div class="card-body ">
-        <p class="card-text {{message.textAlign}}">{{message.text}}</p>
-      </div>
-      <div class="card-footer {{message.textAlign}}">{{message.sender}} <span>({{message.time}})</span></div>
+<div #messageContainer class="scrollContainer">
+  <div #messageElement *ngFor="let message of messageList" class="card shadow {{message.isAlert}} {{message.cardAlign}}">
+    <div class="card-body">
+      <p class="card-text {{message.textAlign}}">{{message.text}}</p>
     </div>
+    <div class="card-footer {{message.textAlign}}">{{message.sender}} <span>({{message.time}})</span></div>
+  </div>
+</div>
