--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,2 +1,2 @@
-<jc-chat-list-view [messageList]="messages"></jc-chat-list-view>
+<jc-chat-list-view #scrollMe [messageList]="messages"></jc-chat-list-view>
 <jc-chat-input-form (messageCreated) = "addMessage($event)"></jc-chat-input-form>
