introduce message-data-service and date-format-pipe for messages

--- a/src/app/chat/chat-list-view/chat-list-view.component.html
+++ b/src/app/chat/chat-list-view/chat-list-view.component.html
@@ -1,8 +1,9 @@
 <div #messageContainer class="scrollContainer">
   <div #messageElement *ngFor="let message of messageList" class="card shadow {{message.isAlert}} {{message.cardAlign}}">
     <div class="card-body">
+      <p style="display: none;" class="card-text incoming {{message.textAlign}}">{{message.sender}}</p>
       <p class="card-text {{message.textAlign}}">{{message.text}}</p>
     </div>
-    <div class="card-footer {{message.textAlign}}">{{message.sender}} <span>({{message.time}})</span></div>
+    <div class="card-footer {{message.textAlign}}"><span>{{message | messageDateFormat}}</span></div>
   </div>
 </div>
