--- a/src/app/chat/chat-list-view/chat-list-view.component.scss
+++ b/src/app/chat/chat-list-view/chat-list-view.component.scss
@@ -15,13 +15,20 @@
 .card {
   flex: none;
   z-index: 100;
-  margin-bottom: 3em;
+  margin-bottom: 4em;
 }
 
 .card-body {
   margin: 0;
   padding: 10px;
   font-size: 0.9em;
+}
+
+.card.incoming > .card-body > .card-text.incoming {
+  display: block !important;
+  font-size: .7em;
+  font-weight: bold;
+  margin: 0; padding: 0;
 }
 
 .card-footer {
