colorify remote sender name

--- a/src/app/chat/chat-list-view/chat-list-view.component.scss
+++ b/src/app/chat/chat-list-view/chat-list-view.component.scss
@@ -28,6 +28,7 @@
   display: block !important;
   font-size: .7em;
   font-weight: bold;
+  color: $leftAlignedMessageSenderColor;
   margin: 0; padding: 0;
 }
 
