--- a/src/app/chat/chat-list-view/chat-list-view.component.html
+++ b/src/app/chat/chat-list-view/chat-list-view.component.html
@@ -3,7 +3,7 @@
     <div class="card-body">
       <p style="display: none;" class="card-text incoming {{message.textAlign}}">{{message.sender}}</p>
       <p class="card-text {{message.textAlign}}">{{message.text}}</p>
+      <p class="card-time {{message.textAlign}}"><span>{{message | messageDateFormat}}</span></p>
     </div>
-    <div class="card-footer {{message.textAlign}}"><span>{{message | messageDateFormat}}</span></div>
   </div>
 </div>
