--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,3 +42,12 @@ footer{
     text-shadow: 0 0 10px black;
   }
 }
+
+.bg-primary{
+  background-color: darkblue !important;
+}
+
+.btn-primary{
+  background-color: darkblue !important;
+  border-color: darkblue !important;
+}
