fix some styling

--- a/src/app/chat/chat-list-view/chat-list-view.component.scss
+++ b/src/app/chat/chat-list-view/chat-list-view.component.scss
@@ -36,6 +36,10 @@
   border-top-right-radius: 0;
 }
 
+.card.bg-primary.neighbor > .card-body > .card-text {
+  font-weight: normal !important;
+}
+
 .card.bg-primary.hasFollowUps {
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
